# image-display-and-directory

./: .gitignore  Cargo.toml  README.md  justfile  spec.md
.github/workflows/: flatpak.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  perf_findings_2026-02-13.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
data/: lt.gtw.idxd.desktop  lt.gtw.idxd.metainfo.xml
docs/: performance-findings-2026-02-13.md
flatpak/: lt.gtw.idxd.json
scripts/: bench_sweep.py
src/: app.rs  image_loader.rs  main.rs  style.css
src/bench/: mod.rs
src/layout/: justified.rs  layout_cache.rs  mod.rs
src/models/: media_item.rs  media_store.rs  mod.rs  row_model.rs
src/scanner/: file_scanner.rs  metadata.rs  mod.rs
src/thumbnails/: cache.rs  generator.rs  mod.rs  queue.rs
src/ui/: keybindings.rs  list_view.rs  mod.rs  row_widget.rs  viewer.rs  window.rs
src/video/: player.rs
