[package]
name = "idxd"
version = "0.1.0"
edition = "2021"

[dependencies]
# GTK4 UI
gtk4 = { version = "0.9", features = ["v4_14"] }
gdk4 = "0.9"
glib = "0.20"
gio = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite cache
rusqlite = { version = "0.32", features = ["bundled"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }

# Epoxy for OpenGL proc address resolution in GTK
epoxy = "0.1"

# Libc for dlopen/dlsym
libc = "0.2"

# XDG directories
directories = "5"

# Hashing for thumbnail filenames
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Async channels
async-channel = "2"
flume = "0.11"

# Walkdir for scanning
walkdir = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LRU cache
lru = "0.12"

# Parking lot for faster locks
parking_lot = "0.12"

# Once cell for lazy statics
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
